--- a/TestGeneratorAPI.csproj
+++ b/TestGeneratorAPI.csproj
@@ -6,6 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="src\API\NovaPasta\**" />
+    <Content Remove="src\API\NovaPasta\**" />
+    <EmbeddedResource Remove="src\API\NovaPasta\**" />
+    <None Remove="src\API\NovaPasta\**" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
@@ -27,9 +34,5 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="src\API\NovaPasta\" />
-  </ItemGroup>
 
 </Project>
