--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
     "Key": "MySuperSecretKeyThatIs32Bytes!!AAAAA"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TaskManagementDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=AutoMasterDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
